# address-book

./: .env.example  .gitignore  Justfile  Procfile.dev  README.md  pyproject.toml
backend/: app.py  db.py  settings.py
backend/routers/: address_book.py  health.py
deploy/: compose-dev.yaml  env-dev
deploy/backend/: Dockerfile
