[project]
name = "address-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.0",
    "phonenumbers>=9.0.20",
    "pydantic-extra-types>=2.10.6",
    "pydantic-settings>=2.12.0",
    "redis[hiredis]>=7.1.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
